--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
   "extends": "@tsconfig/react-native/tsconfig.json", /* Recommended React Native TSConfig base */
   "compilerOptions": {
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     /* Path alias config */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "*": ["src/*"]
     },
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
     /* Completeness */
