--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^9.3.0",
+    "@shopify/restyle": "^2.1.0",
     "@tanstack/react-query": "^4.3.4",
     "apisauce": "^2.1.6",
     "react": "18.1.0",
