--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^9.3.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
     "@shopify/restyle": "^2.1.0",
     "@tanstack/react-query": "^4.3.4",
     "apisauce": "^2.1.6",
     "react": "18.1.0",
     "react-native": "0.70.1",
-    "react-native-config": "^1.4.6"
+    "react-native-config": "^1.4.6",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-screens": "^3.17.0",
+    "react-native-svg": "^13.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
