--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-config": "^1.4.6",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
-    "react-native-svg": "^13.2.0"
+    "react-native-svg": "^13.2.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
