--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-config": "^1.4.6",
+    "react-native-mmkv": "^2.4.3",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "^13.2.0",
