--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/netinfo": "^9.3.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@shopify/flash-list": "^1.3.0",
     "@shopify/restyle": "^2.1.0",
     "@tanstack/react-query": "^4.3.4",
     "apisauce": "^2.1.6",
