--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,14 @@
   "compilerOptions": {
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "target": "es2017",
+    "module": "esnext",
+    "esModuleInterop": true,
+    "noImplicitAny": false,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "lib": ["es2015", "es2016", "es2016.array.include", "scripthost", "dom"],
+    "types": ["jest","node"],
     /* Path alias config */
     "baseUrl": ".",
     "paths": {
