--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest --watchAll --detectOpenHandles --verbose",
+    "test": "jest --detectOpenHandles --verbose",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
@@ -32,7 +32,6 @@
     "@babel/runtime": "^7.12.5",
     "@faker-js/faker": "^7.5.0",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^11.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.0.3",
