--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-bootsplash": "^4.3.2",
     "react-native-config": "^1.4.6",
     "react-native-fast-image": "^8.6.1",
     "react-native-mmkv": "^2.4.3",
